+Added japanese +Updated Menu color

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <seed-menu [items]="menuItems"></seed-menu>
 <div class="container">
     <router-outlet></router-outlet>
+    <button (click)="useLanguage('en')">en</button>
+    <button (click)="useLanguage('jp')">jp</button>
 </div>
