--- a/src/app/menu/components/menu/menu.component.scss
+++ b/src/app/menu/components/menu/menu.component.scss
@@ -2,7 +2,7 @@ $menuHeight: 80px;
 
 :host {
     display:block;
-    background-color: #2196F3;
+    background-color: #000000;
     height:$menuHeight;
     line-height:$menuHeight;
     padding:0 20px;
