--- a/src/app/home/components/home/home.component.html
+++ b/src/app/home/components/home/home.component.html
@@ -2,3 +2,6 @@
     [innerText]="'home.title' | translate"></h1>
 <p class="description"
     [innerText]="'home.description' | translate"></p>
+
+<input [(ngModel)]="hello">
+<button>button: {{hello}}</button>
