--- a/src/app/menu/components/menu/menu.component.html
+++ b/src/app/menu/components/menu/menu.component.html
@@ -1,2 +1,1 @@
-<seed-menu-item *ngFor="let item of items"
-    [item]="item"></seed-menu-item>
+<seed-menu-item *ngFor="let item of items" [item]="item"></seed-menu-item>
