--- a/src/app/menu/components/menu-item/menu-item.component.scss
+++ b/src/app/menu/components/menu-item/menu-item.component.scss
@@ -9,7 +9,7 @@ a {
     font-size:15px;
     font-weight:600;
     &.active {
-        color: #FFEB3B;
+        color: #CFB53B;
     }
     &:hover {
         text-decoration: underline;
