--- a/src/app/about/components/about/about.component.html
+++ b/src/app/about/components/about/about.component.html
@@ -2,3 +2,9 @@
     [innerText]="'about.title' | translate"></h1>
 <p class="description"
     [innerText]="'about.description' | translate"></p>
+
+<quill-editor [(ngModel)]="text"></quill-editor>
+
+<mat-card class="formatted-text-box">
+    <mat-card-content [innerHTML]="text"></mat-card-content>
+</mat-card>
