+Added Admin component +Added menu hamburger on small screens

--- a/src/app/about/components/about/about.component.html
+++ b/src/app/about/components/about/about.component.html
@@ -1,10 +1,2 @@
-<h1 class="title"
-    [innerText]="'about.title' | translate"></h1>
-<p class="description"
-    [innerText]="'about.description' | translate"></p>
-
-<quill-editor [(ngModel)]="text"></quill-editor>
-
-<mat-card class="formatted-text-box">
-    <mat-card-content [innerHTML]="text"></mat-card-content>
-</mat-card>
+<h1 class="title" [innerText]="'about.title' | translate"></h1>
+<p class="description" [innerText]="'about.description' | translate"></p>
