--- a/src/app/menu/components/menu/menu.component.html
+++ b/src/app/menu/components/menu/menu.component.html
@@ -1,4 +1,13 @@
-<div class="menu-container">
+<div class="menu-container small-screen">
+    <button mat-button class="small-screen-menu" [matMenuTriggerFor]="menu">
+        <mat-icon role="img" aria-hidden="true">menu</mat-icon>
+    </button>
+    <mat-menu #menu="matMenu">
+        <button mat-menu-item *ngFor="let item of items" [routerLink]="item.link" [routerLinkActive]="'active'" [innerText]="item.title | translate"></button>
+    </mat-menu>
+</div>
+
+<div class="menu-container big-screen">
     <span class="menu-item"><a>ETW</a></span>
     <seed-menu-item *ngFor="let item of items" [item]="item"></seed-menu-item>
     <span class="spacer"></span>
