+Placed word editor in admin page

--- a/src/app/admin/components/admin/admin.component.html
+++ b/src/app/admin/components/admin/admin.component.html
@@ -1,2 +1,8 @@
 <h1 class="title" [innerText]="'admin.title' | translate"></h1>
 <p class="description" [innerText]="'admin.description' | translate"></p>
+
+<quill-editor [(ngModel)]="text"></quill-editor>
+
+<mat-card class="formatted-text-box">
+    <mat-card-content [innerHTML]="text"></mat-card-content>
+</mat-card>
